samples/_failures_safe/1761722005_80bd1d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2db1ca05.c: In function ‘main’:
./samples/SAFE/__tmp_2db1ca05.c:147:5: error: ‘matrix’ undeclared (first use in this function); did you mean ‘Matrix’?
  147 |     matrix
      |     ^~~~~~
      |     Matrix
./samples/SAFE/__tmp_2db1ca05.c:147:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_2db1ca05.c:147:11: error: expected ‘;’ at end of input
  147 |     matrix
      |           ^
      |           ;
./samples/SAFE/__tmp_2db1ca05.c:147:5: error: expected declaration or statement at end of input
  147 |     matrix
      |     ^~~~~~
